# kreuzcrawl

./: .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  Package.swift  README.md  Taskfile.yml  alef.toml  composer.json  config.m4  deny.toml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  resume.txt  test_from_json.php  tsconfig.json  zensical.toml
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/crawlberg_cli/: downloader.py
cli-proxy/pypi/kreuzcrawl_cli/: cli.py  downloader.py
crates/crawlberg-bindings-common/: Cargo.toml
crates/crawlberg-cli/: Cargo.toml
crates/crawlberg-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/crawlberg-ffi/src/: lib.rs
crates/crawlberg-php/: Cargo.toml
crates/crawlberg-php/src/: composer.json  lib.rs
crates/kreuzcrawl/: Cargo.toml  README.md
crates/kreuzcrawl-bindings-common/: Cargo.toml
crates/kreuzcrawl-browser/: Cargo.toml  build.rs
crates/kreuzcrawl-browser/js/: bootstrap.js
crates/kreuzcrawl-browser/src/: adapter.rs  context.rs  lib.rs  page.rs
crates/kreuzcrawl-browser/src/dom/: mod.rs  selector.rs  serialize.rs  tree.rs  tree_sink.rs
crates/kreuzcrawl-browser/src/js/: markdown.rs  mod.rs  module_loader.rs  ops.rs  runtime.rs  v8_lock.rs
crates/kreuzcrawl-browser/src/net/: blocklist.rs  client.rs  cookies.rs  interceptor.rs  mod.rs  robots.rs  ssrf.rs  wreq_client.rs
crates/kreuzcrawl-bypass/: Cargo.toml
crates/kreuzcrawl-cli/: Cargo.toml
crates/kreuzcrawl-cli/src/: main.rs
crates/kreuzcrawl-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  kreuzcrawl-ffi.pc
crates/kreuzcrawl-ffi/cmake/: kreuzcrawl-ffi-config.cmake
crates/kreuzcrawl-ffi/include/: kreuzcrawl.h
crates/kreuzcrawl-ffi/src/: lib.rs
crates/kreuzcrawl-node/: Cargo.toml  README.md  package.json
crates/kreuzcrawl-node/npm/darwin-arm64/: package.json
crates/kreuzcrawl-node/npm/darwin-x64/: package.json
crates/kreuzcrawl-node/npm/linux-arm64-gnu/: package.json
crates/kreuzcrawl-node/npm/linux-arm64-musl/: package.json
crates/kreuzcrawl-node/npm/linux-x64-gnu/: package.json
crates/kreuzcrawl-node/npm/linux-x64-musl/: package.json
crates/kreuzcrawl-node/npm/win32-arm64-msvc/: package.json
crates/kreuzcrawl-node/npm/win32-x64-msvc/: package.json
crates/kreuzcrawl-node/src/: lib.rs
crates/kreuzcrawl-php/: Cargo.toml
crates/kreuzcrawl-php/src/: composer.json  lib.rs
crates/kreuzcrawl-py/: Cargo.toml
crates/kreuzcrawl-py/src/: lib.rs  pyproject.toml
crates/kreuzcrawl-wasm/: Cargo.toml  README.md  package.json
crates/kreuzcrawl-wasm/src/: lib.rs
crates/kreuzcrawl/examples/: custom_builder.rs  debug_validate.rs
crates/kreuzcrawl/src/: assets.rs  batch.rs  bindings.rs  browser.rs  browser_detect.rs  browser_pool.rs  browser_profile.rs  browser_session_pool.rs  budget.rs  citations.rs  crawl.rs  document.rs  engine.rs  error.rs  helpers.rs  html.rs  http.rs  lib.rs  map.rs  markdown.rs  native_browser.rs  normalize.rs  robots.rs  scrape.rs  sitemap.rs  stream.rs  traits.rs  types.rs  warc.rs
crates/kreuzcrawl/src/api/: error.rs  handlers.rs  jobs.rs  mod.rs  router.rs  startup.rs  state.rs  types.rs
crates/kreuzcrawl/src/defaults/: cache.rs  dispatch.rs  domain_state.rs  emitter.rs  filter.rs  frontier.rs  llm_extractor.rs  middleware.rs  mod.rs  rate_limiter.rs  resolver.rs  store.rs  strategy.rs
crates/kreuzcrawl/src/engine/: batch.rs  builder.rs  crawl_loop.rs  mod.rs
crates/kreuzcrawl/src/html/: charset.rs  content.rs  detection.rs  feeds.rs  images.rs  json_ld.rs  links.rs  metadata.rs  mod.rs  selectors.rs
crates/kreuzcrawl/src/interact/: actions.rs  chromiumoxide.rs  mod.rs  native.rs  validation.rs
crates/kreuzcrawl/src/mcp/: errors.rs  format.rs  mod.rs  params.rs  server.rs
crates/kreuzcrawl/src/net/: mod.rs  ssrf.rs
crates/kreuzcrawl/src/research/: agent.rs  mod.rs  planner.rs  synthesizer.rs  types.rs
crates/kreuzcrawl/src/telemetry/: metrics.rs
crates/kreuzcrawl/src/tower/: cache.rs  mod.rs  rate_limit.rs  service.rs  tracing_layer.rs  types.rs  ua_rotation.rs
crates/kreuzcrawl/tests/: browser_pool_integration.rs  engine_error_escalation.rs  llm_integration.rs  ssrf_integration.rs  test_antibot_strategy.rs  test_api.rs  test_batch_crawl_integration.rs  test_browser_mode_stealth.rs  test_browser_native.rs  test_browser_profile.rs  test_bypass_provider.rs  test_cache_integration.rs  test_dispatch_robustness.rs  test_document_download.rs  test_escalation.rs  test_frontier_dedup.rs  test_interact.rs  test_interaction.rs  test_markdown_integration.rs  test_mcp.rs  test_mcp_contract.rs  test_mcp_http.rs  test_middleware_integration.rs  test_pool_reuse.rs  test_proptest_invariants.rs  test_rate_limiting_integration.rs  test_research.rs  test_scrape_redirects.rs  test_soft_http_errors.rs  test_strategy_integration.rs  test_stream_seed_error.rs  test_streaming_memory_bounded.rs  test_waf_detection_integration.rs  test_waf_fixtures.rs  test_waf_hot_reload.rs  test_waf_robustness.rs  test_warc.rs
e2e/python/: conftest.py  pyproject.toml
e2e/python/tests/: test_auth.py  test_batch.py  test_browser.py  test_cache.py  test_concurrent.py  test_content.py  test_cookies.py  test_crawl.py  test_download.py  test_encoding.py  test_engine.py  test_error.py  test_filter.py  test_interaction.py  test_links.py  test_map.py  test_markdown.py  test_metadata.py  test_middleware.py  test_proxy.py  test_rate_limit.py  test_redirect.py  test_robots.py  test_scrape.py  test_sitemap.py  test_ssrf.py  test_stealth.py  test_strategy.py  test_stream.py  test_validation.py  test_warc.py
tests/api/: conftest.py  pyproject.toml  test_contract.py  test_stateful.py
tools/benchmark-harness/: .gitignore  Cargo.toml
tools/benchmark-harness/fixtures/: reachability.json
tools/benchmark-harness/src/: adapter.rs  cache.rs  config.rs  dataset.rs  error.rs  fixture.rs  lib.rs  main.rs  monitoring.rs  output.rs  profiling.rs  quality.rs  runner.rs  stats.rs  types.rs
(+1388 files in other folders)
