[workspace]
members = ["crates/*", "tools/*"]
exclude = [".claude", "e2e/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"
rust-version = "1.91"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
async-trait = "0.1"
blake3 = "1"
camino = "1.2"
chromiumoxide = { version = "0.9", default-features = false }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
html-to-markdown-rs = { path = "../html-to-markdown/crates/html-to-markdown" }
itertools = "0.14"
liter-llm = { path = "../liter-llm/crates/liter-llm", features = [
    "native-http",
] }
minijinja = "2"
quick-xml = "0.39"
regex = "1"
reqwest = { version = "0.13", features = ["cookies", "gzip", "brotli"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = [
    "timeout",
    "retry",
    "limit",
    "util",
    "make",
] }
tracing = "0.1"
url = "2"
walkdir = "2.5"
