[workspace]
members = ["crates/*", "tools/*", "packages/elixir/native/kreuzcrawl_nif"]
exclude = [
    ".claude",
    "e2e/rust",
    "packages/ruby/ext/kreuzcrawl_rb/native",
    "packages/ruby/vendor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"
rust-version = "1.91"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
camino = "1.2"
chromiumoxide = { version = "0.9", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
flate2 = "1"
html-to-markdown-rs = { version = "3.1", features = ["full"] }
itertools = "0.14"
liter-llm = { version = "1.2", features = ["native-http"] }
memchr = "2"
minijinja = "2"
quick-xml = "0.39"
regex = "1"
reqwest = { version = "0.13", features = ["cookies", "gzip", "brotli"] }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = [
    "timeout",
    "retry",
    "limit",
    "util",
    "make",
] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-full",
    "trace",
    "limit",
    "catch-panic",
    "request-id",
    "sensitive-headers",
] }
tracing = "0.1"
url = "2"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"

# Binding framework dependencies
ext-php-rs = "0.15"
libc = "0.2"
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
