[workspace]
members = ["crates/*", "e2e/rust", "packages/elixir/native/kreuzcrawl_nif", "tools/*"]
exclude = [
    ".claude",
    "packages/ruby/ext/kreuzcrawl_rb",
    "packages/ruby/ext/src_rb",
    "packages/ruby/tmp",
    "packages/ruby/vendor",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.8"
edition = "2024"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>"]
license = "Elastic-2.0"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzcrawl"
readme = "README.md"
rust-version = "1.91"
keywords = ["crawl", "scrape", "web", "spider", "rust"]
categories = ["web-programming", "network-programming"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
camino = "1.2"
chromiumoxide = { version = "0.9", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"

# Binding framework dependencies
ext-php-rs = "0.15"
flate2 = "1"
html-to-markdown-rs = { version = "3.2", features = ["full"] }
itertools = "0.14"
libc = "0.2"
liter-llm = { version = "1.2", features = ["native-http"] }
memchr = "2"
minijinja = "2"
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
quick-xml = "0.39"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = ["cookies", "gzip", "brotli"] }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tl = { package = "astral-tl", version = "0.7" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "1.1"
tower = { version = "0.5", features = [
    "timeout",
    "retry",
    "limit",
    "util",
    "make",
] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-full",
    "trace",
    "limit",
    "catch-panic",
    "request-id",
    "sensitive-headers",
] }
tracing = "0.1"
url = "2"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1.23", features = ["v4"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
