[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kreuzcrawl-cli"
version = "0.1.0"
description = "CLI proxy for kreuzcrawl — downloads and runs the native kreuzcrawl binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/kreuzcrawl"
Repository = "https://github.com/kreuzberg-dev/kreuzcrawl.git"
Issues = "https://github.com/kreuzberg-dev/kreuzcrawl/issues"

[project.scripts]
kreuzcrawl = "kreuzcrawl_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kreuzcrawl_cli"]
