[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "kreuzcrawl-cli"
version = "0.1.0"
description = "CLI proxy for kreuzcrawl — downloads and runs the native kreuzcrawl binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Homepage = "https://github.com/kreuzberg-dev/kreuzcrawl"
urls.Issues = "https://github.com/kreuzberg-dev/kreuzcrawl/issues"
urls.Repository = "https://github.com/kreuzberg-dev/kreuzcrawl.git"
scripts.kreuzcrawl = "kreuzcrawl_cli.cli:main"

[tool.hatch]
build.targets.wheel.packages = [ "kreuzcrawl_cli" ]
