[package]
name = "crawlberg-bindings-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Shared adapter layer for crawlberg language bindings"
keywords = ["crawl", "scrape", "bindings", "web", "ffi"]
categories = ["api-bindings"]

[dependencies]
crawlberg = { path = "../crawlberg", version = "1.0.1", features = ["native-runtime"] }

[lints]
workspace = true
