[package]
name = "crawlberg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line web crawler and scraper"

[[bin]]
name = "crawlberg"
path = "src/main.rs"

[features]
default = []
all = ["api", "mcp", "mcp-http", "warc", "ai"]
api = ["crawlberg/api"]
mcp = ["crawlberg/mcp"]
mcp-http = ["crawlberg/mcp-http"]
warc = ["crawlberg/warc"]
ai = ["crawlberg/ai"]

[dependencies]
clap = { workspace = true }
crawlberg = { path = "../crawlberg", version = "1.0.1", features = [
    "native-runtime",
    "browser",
] }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
