[package]
name = "crawlberg-php"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "spider", "web"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []

[dependencies]
crawlberg = { version = "1.0.1", path = "../crawlberg", features = ["interact", "browser-chromiumoxide"] }
ext-php-rs = "0.15.15"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
