[package]
name = "kreuzcrawl-bypass"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configurable HTTP-based BypassProvider implementations for kreuzcrawl, driven by per-vendor YAML configs."

[dependencies]
async-trait = { workspace = true }
kreuzcrawl = { path = "../kreuzcrawl", version = "0.3.0-rc.70" }
reqwest = { workspace = true }
saphyr = "0.0.6"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[lints]
workspace = true
