[package]
name = "kreuzcrawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line web crawler and scraper"

[[bin]]
name = "kreuzcrawl"
path = "src/main.rs"

[features]
default = []
all = ["api", "mcp", "mcp-http", "warc", "ai", "tracing"]
api = ["kreuzcrawl/api"]
mcp = ["kreuzcrawl/mcp"]
mcp-http = ["kreuzcrawl/mcp-http"]
warc = ["kreuzcrawl/warc"]
ai = ["kreuzcrawl/ai"]
tracing = ["kreuzcrawl/tracing"]

[dependencies]
clap = { workspace = true }
kreuzcrawl = { path = "../kreuzcrawl", features = ["native-runtime"] }
serde_json = { workspace = true }
tokio = { workspace = true }
