[package]
name = "kreuzcrawl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line web crawler and scraper"

[[bin]]
name = "kreuzcrawl"
path = "src/main.rs"

[features]
default = []
all = ["api", "mcp", "mcp-http", "warc", "ai"]
api = ["kreuzcrawl/api"]
mcp = ["kreuzcrawl/mcp"]
mcp-http = ["kreuzcrawl/mcp-http"]
warc = ["kreuzcrawl/warc"]
ai = ["kreuzcrawl/ai"]

[dependencies]
clap = { workspace = true }
kreuzcrawl = { path = "../kreuzcrawl", version = "0.3.0-rc.80", features = [
    "native-runtime",
    "browser",
] }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
