[package]
name = "kreuzcrawl-node"
version = "0.3.0-rc.37"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "spider", "web"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzcrawl = { version = "0.3.0-rc.37", path = "../kreuzcrawl", features = ["interact", "browser-chromiumoxide"] }
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json", "futures-util"]

[build-dependencies]
napi-build = "2"
