[package]
name = "kreuzcrawl-php"
version = "0.3.0-rc.29"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "web", "spider"]
categories = ["text-processing"]

# `ahash` is conditionally referenced: only when the umbrella crate exposes
# `AHashMap<Cow<str>, _>` parameters (the conditional `__*_ahash` shim rebuilds).
# `futures-util` is similarly conditional on streaming adapters being declared.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []

[dependencies]
ext-php-rs = "0.15"
futures-util = "0.3"
kreuzcrawl = { version = "0.3.0-rc.29", path = "../kreuzcrawl", features = ["interact", "browser-chromiumoxide"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
