[package]
name = "kreuzcrawl-php"
version = "0.3.0-rc.37"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "spider", "web"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzcrawl = { version = "0.3.0-rc.37", path = "../kreuzcrawl", features = ["interact", "browser-chromiumoxide"] }
ext-php-rs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[features]
extension-module = []
