[package]
name = "kreuzcrawl-php"
version = "0.3.0-rc.52"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "spider", "web"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []

[dependencies]
ext-php-rs = "0.15.12"
futures-util = "0.3"
kreuzcrawl = { version = "0.3.0-rc.52", path = "../kreuzcrawl", features = ["interact", "browser-chromiumoxide"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
