[package]
name = "kreuzcrawl-py"
version = "0.3.0-rc.20"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
readme = false
keywords = ["crawl", "scrape", "web", "spider"]
categories = ["text-processing"]

[lib]
name = "_kreuzcrawl"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
kreuzcrawl = { path = "../kreuzcrawl" }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
