[package]
name = "kreuzcrawl-wasm"
version = "0.1.0-rc.1"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[dependencies]
kreuzcrawl = { path = "../kreuzcrawl" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
