[package]
name = "kreuzcrawl-wasm"
version = "0.1.1"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance web crawling engine"
repository = "https://github.com/kreuzberg-dev/kreuzcrawl"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures", "getrandom", "getrandom_compat"]

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# Also need to explicitly depend on 0.3.4 to enable wasm_js for transitive deps
getrandom_compat = { package = "getrandom", version = "=0.3.4", features = ["wasm_js"] }
js-sys = "0.3"
kreuzcrawl = { path = "../kreuzcrawl", default-features = false }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
