[package]
name = "kreuzcrawl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A Rust crawling engine for turning websites into structured data"

[features]
default = []
browser = ["dep:chromiumoxide"]
ai = ["dep:liter-llm", "dep:minijinja"]
tracing = ["dep:tracing"]
interact = ["browser"]
mcp = ["dep:rmcp", "dep:schemars"]
api = [
    "dep:axum",
    "dep:tower-http",
    "dep:utoipa",
    "dep:uuid",
    "dep:dashmap",
    "dep:base64",
]
mcp-http = ["mcp", "api"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
blake3 = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true, optional = true }
dirs = { workspace = true }
flate2 = { workspace = true }
html-to-markdown-rs = { workspace = true }
liter-llm = { workspace = true, optional = true }
memchr = { workspace = true }
minijinja = { workspace = true, optional = true }
quick-xml = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
wiremock = "0.6"
